we need to copy the condition format cell for cell, fdo#86253

Change-Id: Ic090e1b9d13780e7e895a85901d3329cc5703688